_sass/_social_wall.scss
.icon-twitter, .icon-facebook {
  color:#858585;
}
.icon-twitter:hover{
  color:#1da1f2;
}
.icon-facebook:hover{
  color:#3b5998;
}
.icon-share:hover {
  color:#3b5998;
}
.icon-reply:hover {
  color:#cc3399;
}
.icon-loop:hover {
  color:#19cf86;
}
.icon-heart:hover {
  color:#E2264D;
}

.social_wall{
	color: $purple-primary;
	a{
	  text-decoration: none;
	}
	.container{
		padding:0;
		padding: 40px 0;
	}
	.item{
		padding:10px;
	}
	.item .wrap_status {
		height:410px;
	  background:#fff;
	  padding:20px;
	  font-family: Montserrat, sans-serif;
		> a > img, > img, > a > iframe, > iframe{
		  height:207px; /* Precise to avoid black line on iframe video */
			width: 100%;
			object-fit: cover;
			font-family: 'object-fit: cover;'
		}
    > video{ /* issue on webkit with cover */
      height:207px; /* Precise to avoid black line on iframe video */
			width: 100%;
      object-fit: contain;
      font-family: 'object-fit: contain;'
    }
		/* Social_wall Blockquote */
		blockquote{
      overflow:hidden;
		  margin:0;padding: 20px;
			height:207px;
		  display: inline-block;
		  width: 100%;
		  background: #FAFAFA;
		  border: 1px solid #EFEFEF;
			.story_img{
			  float:left;
				width: 130px;
				padding-right:10px;
				img{
					object-fit: cover;
					height: 165px;
				}
			}
			.wrap_story{
				position: relative;
				height: 150px;
			}
			h1, h1 a{
			  font-size: 14px;
				line-height: 20px;
			  color: $purple-primary;
			  word-break: normal;
				margin:0;
			}
			p.desc{
			  font-size: 12px;
			  margin-top: 5px;
			  margin-bottom: 5px;
			  color: #858585;
				a{
				  color: #858585;
				}
			}
			cite, cite a{
			  font-size: 10px;
			  color: #b6b6b6;
			}
			.status_box{
				max-height:165px;
				position:relative;
				overflow:hidden;
				.read_more{
					position: absolute;
				  bottom: 0;
				  left: 0;
				  width: 100%;
				  text-align: center;
				  margin: 0; padding: 30px 0;

  			/* "transparent" only works here because == rgba(0,0,0,0) */
  			background-image: linear-gradient(to bottom, transparent, #858585);
				}
			}
		}

		.user_info{
			padding-top:15px;
			margin-right:0;
			.profil_image, .user_info, .wrap_user_name, .icon_social{
				margin:0;padding:0;
			}
			.profile_image{
				margin-right:5px;
				img{
					/*border-radius: 50%;*/
					width:55px;
				}
			}
			.wrap_user_name{
				margin-left:-5px;
				padding-top:5px;
				.user, .username{
					padding:0;margin:0;
					line-height:0;
				}
				.user a{
					font-size: 18px;
					line-height: 24px;
					color: $purple-primary;
				}
				.username a{
					color:#b6b6b6;
					font-size:14px;
					line-height:20px;
					font-weight:300;
				}
			}
			.icon_social{
				padding-top:10px;
				span{
					font-size: 25px;
					float:right;
				}
			}
		}


		/* Status/message */
		.status_box {
			height: 60px;
			position: relative;
			overflow: hidden;
			clear:both;
			margin: 0;
			p.status{
				color:#858585;
				font-size:12px;
				line-height: 18px;
				font-family:sans-serif;
				height: 40px;
				a, a:visited, a:active, a:link{
					color:$blue-primary;
					font-size: 12px;
				}
				a:hover{
					color:#666;
				}
			}
			.read_more {
				position: absolute;
				bottom: 0;
				left: 0;
				width: 100%;
				height:100%;
				text-align: center;
				margin: 0;
				background-image: linear-gradient(to bottom, transparent, white);
				a {
					width: 100%;
					display: block;
					height: 100%;
				}
			}
		}
		 > .link .status_box, > .quoted .status_box{
			max-height: 50px;
			background-image: linear-gradient(to bottom, transparent, white);
		}
	/* Social_wall meta info */
	.meta_info{
		position: absolute;
		bottom: 20px;
		a{
		  padding:2px;
		}
		time{
		 color: #b6b6b6;
		 font-size: 12px;
	 }
	}
}
.item.text_only .wrap_status .status_box, .item.link_not_fetch .wrap_status .status_box{
	height: 100%;
	overflow: none;
	p.status{
		font-size:25px;
		line-height: 36px;
		height:100%;
		a, a:visited, a:active, a:link{
			font-size:25px;
			line-height: 31px;
		}
	}
}
}

